Make use of java.util.Base64
sun.misc is not supported since Java 9, the right class to use is
java.util.Base64.

+reformat code